modified-by-automatic-build

--- a/src/edu/stanford/smi/protege/resource/files/build.properties
+++ b/src/edu/stanford/smi/protege/resource/files/build.properties
@@ -1,7 +1,7 @@
-#Fri Oct 27 15:38:57 PDT 2006
+#Mon Oct 30 17:13:56 PST 2006
+build.number=344
+build.number.previous=343
 build.version.previous=3.1.1
-build.number.previous=342
-build.number=343
 name=Protege
 copyright=Copyright (c) 1998-2006 Stanford University
 build.status=beta
