--- a/src/edu/stanford/smi/protege/resource/files/build.properties
+++ b/src/edu/stanford/smi/protege/resource/files/build.properties
@@ -4,6 +4,6 @@ build.number.previous=347
 build.version.previous=3.1.1
 name=Protege
 copyright=Copyright (c) 1998-2006 Stanford University
-build.status=beta
+build.status=
 build.version=3.2
 trademark=Prot&eacute;g&eacute; is a trademark of Stanford University
