--- a/build.xml
+++ b/build.xml
@@ -24,6 +24,9 @@
 	<property name = "packages" value = "edu.*"/>  
 	<property name = "includeAntRuntime" value = "no"/>
 	<property name = "source" value = "1.5"/>
+
+
+
 	<path id = "project.classpath">    
 		<pathelement location = "${lib}/junit.jar"/>
 		<pathelement location = "${lib}/looks.jar"/>
@@ -156,6 +159,24 @@
 		</copy>    
 		<jar jarfile = "${dist}/protege.jar" basedir = "${classes}" manifest = "${src}/META-INF/MANIFEST.MF"/>  
 	</target>
+
+
+        <target name = "update" depends = "jar">
+          <fail message = "set the protege.dir variable to do an install">
+            <condition>
+              <not>
+                <and>
+                  <isset property="protege.dir"/>
+                  <available file="${protege.dir}"
+                             type="dir"/>
+                </and>
+              </not>
+            </condition>
+          </fail>
+          <copy file="${dist}/protege.jar"
+                todir = "${protege.dir}"/>
+        </target>
+
 
 	<!-- =================================================================== -->
 	
