reorganized the user interface of the welcome dialog based on user feedback on the protege-discussion list.

--- a/src/edu/stanford/smi/protege/resource/files/protege_text.properties
+++ b/src/edu/stanford/smi/protege/resource/files/protege_text.properties
@@ -299,20 +299,25 @@ error_dialog.title=Error
 preferences_dialog.title=Preferences
 open_project_dialog.title=Open Project
 
-welcome_dialog.getting_started=Getting Started
-welcome_dialog.build=Build
-welcome_dialog.open_other=Open Existing File...
-welcome_dialog.open=Open Selected File
-welcome_dialog.all_topics=All Topics
-welcome_dialog.users_guide=User's Guide
-welcome_dialog.faq=FAQ
-welcome_dialog.open_recent_project_title=Recently Accessed
-welcome_dialog.new=Create New Project...
+welcome_dialog.open_recent_project_title=Project \u0026 File Access
+welcome_dialog.open=Open Recent
+welcome_dialog.open.mnemonic=R
+welcome_dialog.open_tooltip=Open the Selected File
+welcome_dialog.open_other=Open Other...
+welcome_dialog.open_other.mnemonic=O
+welcome_dialog.open_existing_tooltip=Browse for an Existing File
+welcome_dialog.new=New Project...
+welcome_dialog.new.mnemonic=N
+welcome_dialog.new_tooltip=Create a New Project
 welcome_dialog.help_title=Help
-welcome_dialog.new_tooltip=
-welcome_dialog.build_tooltip=
-welcome_dialog.open_tooltip=Open the File Selected Above
-welcome_dialog.open_existing_tooltip=Open an Existing File
+welcome_dialog.getting_started=Getting Started
+welcome_dialog.getting_started.mnemonic=G
+welcome_dialog.faq=FAQ
+welcome_dialog.faq.mnemonic=F
+welcome_dialog.users_guide=User's Guide
+welcome_dialog.users_guide.mnemonic=U
+welcome_dialog.all_topics=All Topics
+welcome_dialog.all_topics.mnemonic=A
 
 title.project=Project
 
