--- a/src/edu/stanford/smi/protege/resource/files/protege_text.properties
+++ b/src/edu/stanford/smi/protege/resource/files/protege_text.properties
@@ -299,7 +299,7 @@ error_dialog.title=Error
 preferences_dialog.title=Preferences
 open_project_dialog.title=Open Project
 
-welcome_dialog.open_recent_project_title=Project \u0026 File Access
+welcome_dialog.open_recent_project_title=Recent Files
 welcome_dialog.open=Open Recent
 welcome_dialog.open.mnemonic=R
 welcome_dialog.open_tooltip=Open the Selected File
