--- a/build.xml
+++ b/build.xml
@@ -17,6 +17,10 @@
 	<property name = "scripts" value = "./bin"/>
         <property name = "logs" value = "./logs"/>
         <property name = "plugins" value = "./plugins"/>
+
+        <property environment="env"/>
+        <property name="protege.home" value="${env.PROTEGE_HOME}"/>
+
 	<!-- Compiler options. -->
 	<property name = "deprecation" value = "on"/>    
 	<property name = "debug" value = "on"/>  
@@ -24,13 +28,10 @@
 	<property name = "packages" value = "edu.*"/>  
 	<property name = "includeAntRuntime" value = "no"/>
 	<property name = "source" value = "1.5"/>
-
-
-
 	<path id = "project.classpath">    
-		<pathelement location = "${lib}/junit.jar"/>
-		<pathelement location = "${lib}/looks.jar"/>
-		<pathelement location = "${lib}/unicode_panel.jar"/>
+            <pathelement location = "${lib}/junit.jar"/>
+	    <pathelement location = "${lib}/looks.jar"/>
+            <pathelement location = "${lib}/unicode_panel.jar"/>
 	</path>  
         <path id = "database.drivers">
           <fileset dir="dbdrivers">
@@ -70,8 +71,12 @@
 	<!-- Creates the timestamp -->
 	
 	<!-- =================================================================== -->
+
 	<target name = "init">    
-		<tstamp/>  
+	  <tstamp/>  
+          <condition property="protege.home.set">
+            <available file="${protege.home}/protege.jar" type="file"/>
+          </condition>
 	</target>  
 	<!-- =================================================================== -->
 	
@@ -113,7 +118,14 @@
 	
 	<!-- =================================================================== -->
 	<target name = "compile" depends = "prepare, javacc">    
-		<javac srcdir = "${src}" destdir = "${classes}" deprecation = "{deprecation}" debug = "${debug}" optimize = "${optimize}" includeAntRuntime = "${includeAntRuntime}" source = "${source}">      
+		<javac destdir = "${classes}" 
+                       deprecation = "{deprecation}" 
+                       debug = "${debug}" 
+                       optimize = "${optimize}" 
+                       includeAntRuntime = "${includeAntRuntime}" 
+                       source = "${source}">
+                        <src path="${src}"/>
+                        <src path="${junit}"/>
 			<classpath refid = "project.classpath"/>    
 		</javac>    
 		<rmic base = "${classes}" stubversion = "1.2" classname = "edu.stanford.smi.protege.server.Server"/>    
@@ -122,28 +134,6 @@
 		<rmic base = "${classes}" stubversion = "1.2" classname = "edu.stanford.smi.protege.server.narrowframestore.ServerNarrowFrameStore"/>  
 	</target>
 
-
-	<target name = "compile-junit" depends = "jar">
-		<javac srcdir = "${junit}" 
-                       destdir = "${junit.classes}" 
-                       deprecation = "{deprecation}" 
-                       debug = "${debug}" 
-                       optimize = "${optimize}" 
-                       includeAntRuntime = "${includeAntRuntime}" 
-                       source = "${source}">      
-			<classpath refid = "project.classpath"/>    
-                        <classpath>
-                           <pathelement path="${dist}/protege.jar"/>
-                        </classpath>
-		</javac>    
-	</target>
-
-
-        <target name = "testjar" depends = "compile-junit">
-           <jar jarfile = "${dist}/protege-test.jar"
-                basedir="${junit.classes}">
-           </jar>
-        </target>
 
 	<!-- =================================================================== -->
 	
@@ -159,24 +149,6 @@
 		</copy>    
 		<jar jarfile = "${dist}/protege.jar" basedir = "${classes}" manifest = "${src}/META-INF/MANIFEST.MF"/>  
 	</target>
-
-
-        <target name = "update" depends = "jar">
-          <fail message = "set the protege.dir variable to do an install">
-            <condition>
-              <not>
-                <and>
-                  <isset property="protege.dir"/>
-                  <available file="${protege.dir}"
-                             type="dir"/>
-                </and>
-              </not>
-            </condition>
-          </fail>
-          <copy file="${dist}/protege.jar"
-                todir = "${protege.dir}"/>
-        </target>
-
 
 	<!-- =================================================================== -->
 	
@@ -200,6 +172,21 @@
 	</target>  
 	<!-- =================================================================== -->
 	
+        <target name = "update" depends = "jar">
+          <fail message = "The Protege Home variable must be set for an install">
+            <condition>
+              <not>
+                <and>
+                  <isset property="protege.home.set"/>
+                </and>
+              </not>
+            </condition>
+          </fail>
+          <copy file="${dist}/protege.jar"
+                todir = "${protege.home}"/>
+        </target>
+
+
 	<!-- DIST -->
 	
 	<!-- Zips up all source code, resources, and API documentation. -->
@@ -265,7 +252,7 @@
 
         <target name = "junit" 
                 description = "test the system"
-                depends="compile-junit, jar, testjar">
+                depends="jar">
           <junit  printsummary="withOutAndErr" 
                   haltonerror="on" 
                   haltonfailure="on" 
