--- a/logging.properties
+++ b/logging.properties
@@ -35,7 +35,6 @@ java.util.logging.ConsoleHandler.level=CONFIG
 java.util.logging.ConsoleHandler.formatter=edu.stanford.smi.protege.util.ConsoleFormatter
 
 
-
 #edu.stanford.smi.protege.model.framestore.level=FINEST
 #edu.stanford.smi.protege.model.framestore.FrameStore_Test.level=FINEST
 #edu.stanford.smi.protege.model.framestore.MergingNarrowFrameStore.level=FINEST
@@ -49,8 +48,10 @@ java.util.logging.ConsoleHandler.formatter=edu.stanford.smi.protege.util.Console
 #edu.stanford.smi.protege.storage.database.level=FINEST
 #edu.stanford.smi.protege.storage.database.DatabaseFrameDb.level=FINEST
 #edu.stanford.smi.protege.storage.database.IncludingDatabaseAdapter.level=FINEST
+#edu.stanford.smi.protege.util.LockStepper.level=FINE
 #edu.stanford.smi.protege.util.Log.level=FINEST
 
+#org.protege.client.cache.level=FINE
 
 #
 # RMI logging
