Some predefined properties.

--- a/logging.properties
+++ b/logging.properties
@@ -36,15 +36,19 @@ java.util.logging.ConsoleHandler.formatter=edu.stanford.smi.protege.util.Console
 
 
 #edu.stanford.smi.protege.model.framestore.level=FINEST
+#edu.stanford.smi.protege.model.framestore.FrameStoreManager.level=FINEST
 #edu.stanford.smi.protege.model.framestore.FrameStore_Test.level=FINEST
 #edu.stanford.smi.protege.model.framestore.MergingNarrowFrameStore.level=FINEST
 #edu.stanford.smi.protege.model.Project.level = FINEST
+#edu.stanford.smi.protege.plugin.PluginUtilities.level=FINEST
 #edu.stanford.smi.protege.server.level=FINEST
 #edu.stanford.smi.protege.server.framestore.FrameCalculator.level=FINEST
 #edu.stanford.smi.protege.server.framestore.LocalizeFrameStore.level=FINEST
 #edu.stanford.smi.protege.server.framestore.RemoteClientFrameStore.level=FINEST
 #edu.stanford.smi.protege.server.framestore.ServerFrameStore.level=FINEST
 #edu.stanford.smi.protege.server.Server_Test.level=FINEST
+#edu.stanford.smi.protege.server.SSLSettings.level=FINEST
+#edu.stanford.smi.protege.server.framestore.LocalizeFrameStore.level=FINEST
 #edu.stanford.smi.protege.storage.database.level=FINEST
 #edu.stanford.smi.protege.storage.database.DatabaseFrameDb.level=FINEST
 #edu.stanford.smi.protege.storage.database.IncludingDatabaseAdapter.level=FINEST
