updated build version and status in preparation for the first 3.3 beta build

--- a/src/edu/stanford/smi/protege/resource/files/build.properties
+++ b/src/edu/stanford/smi/protege/resource/files/build.properties
@@ -1,9 +1,9 @@
 #Wed Dec 20 16:53:12 PST 2006
-build.version.previous=3.2
+build.version.previous=3.2.1
 build.number.previous=364
 build.number=365
 name=Protege
-copyright=Copyright (c) 1998-2006 Stanford University
-build.status=
-build.version=3.2.1
+copyright=Copyright (c) 1998-2007 Stanford University
+build.status=beta
+build.version=3.3
 trademark=Prot&eacute;g&eacute; is a trademark of Stanford University
