--- a/protege-core/branches/nci_june15/logging.properties
+++ b/protege-core/branches/nci_june15/logging.properties
@@ -36,6 +36,7 @@ java.util.logging.ConsoleHandler.formatter=edu.stanford.smi.protege.util.Console
 
 
 #edu.stanford.smi.protege.model.framestore.level=FINEST
+ edu.stanford.smi.protege.model.framestore.EventDispatchFrameStore.level=FINE
 #edu.stanford.smi.protege.model.framestore.FrameStoreManager.level=FINEST
 #edu.stanford.smi.protege.model.framestore.FrameStore_Test.level=FINEST
 #edu.stanford.smi.protege.model.framestore.MergingNarrowFrameStore.level=FINEST
