Put fine logging on the EventDispatchFrameStore so that problems with plugins can more easily be analyzed.

--- a/logging.properties
+++ b/logging.properties
@@ -36,6 +36,7 @@ java.util.logging.ConsoleHandler.formatter=edu.stanford.smi.protege.util.Console
 
 
 #edu.stanford.smi.protege.model.framestore.level=FINEST
+ edu.stanford.smi.protege.model.framestore.EventDispatchFrameStore.level=FINE
 #edu.stanford.smi.protege.model.framestore.FrameStoreManager.level=FINEST
 #edu.stanford.smi.protege.model.framestore.FrameStore_Test.level=FINEST
 #edu.stanford.smi.protege.model.framestore.MergingNarrowFrameStore.level=FINEST
