added change tab logging entries (commented out)

--- a/logging.properties
+++ b/logging.properties
@@ -35,7 +35,7 @@ java.util.logging.ConsoleHandler.level=CONFIG
 java.util.logging.ConsoleHandler.formatter=edu.stanford.smi.protege.util.ConsoleFormatter
 
 #edu.stanford.smi.protege.model.framestore.level=FINEST
-#edu.stanford.smi.protege.model.framestore.EventDispatchFrameStore.level=FINEST
+ edu.stanford.smi.protege.model.framestore.EventDispatchFrameStore.level=FINE
 #edu.stanford.smi.protege.model.framestore.FrameStoreManager.level=FINEST
 #edu.stanford.smi.protege.model.framestore.FrameStore_Test.level=FINEST
 #edu.stanford.smi.protege.model.framestore.MergingNarrowFrameStore.level=FINEST
@@ -53,6 +53,10 @@ java.util.logging.ConsoleHandler.formatter=edu.stanford.smi.protege.util.Console
 #edu.stanford.smi.protege.storage.database.DatabaseFrameDb.level=FINEST
 #edu.stanford.smi.protege.storage.database.IncludingDatabaseAdapter.level=FINEST
 #edu.stanford.smi.protege.util.Log.level=FINEST
+
+#edu.stanford.smi.protegex.changes.listeners.ChangesListener.level=FINE
+#edu.stanford.smi.protegex.server_changes.ServerChangesUtil.level=FINE
+
 
 #
 # RMI logging
