extra logging entries

--- a/logging.properties
+++ b/logging.properties
@@ -55,11 +55,10 @@ java.util.logging.ConsoleHandler.formatter=edu.stanford.smi.protege.util.Console
 #edu.stanford.smi.protege.util.Log.level=FINEST
 
 #edu.stanford.smi.protegex.changes.listeners.ChangesListener.level=FINE
-#edu.stanford.smi.protegex.changes.listeners.ChangesListener.level=FINE
 #edu.stanford.smi.protegex.server_changes.listeners.owl.ChangesOwlKBListener.level=FINE
 #edu.stanford.smi.protegex.server_changes.ServerChangesUtil.level=FINE
 #edu.stanford.smi.protegex.prompt.promptDiff.users.ProtegeLogging.level=FINE
-
+#edu.stanford.smi.protegex.server_changes.time.ChangingFrameManagerImpl=FINE
 
 #
 # RMI logging
