--- a/protege-core/trunk/src/edu/stanford/smi/protege/resource/files/build.properties
+++ b/protege-core/trunk/src/edu/stanford/smi/protege/resource/files/build.properties
@@ -1,9 +1,9 @@
-#Fri Mar 09 12:02:41 PST 2007
-build.version=3.3
+#Tue Mar 13 12:01:42 PDT 2007
+build.number.previous=384
+build.number=385
 build.version.previous=3.2.1
-build.number=384
-build.number.previous=383
-build.status=beta
 name=Prot\u00E9g\u00E9
 copyright=Copyright (c) 1998-2007 Stanford University
+build.status=beta
+build.version=3.3
 trademark=Prot\u00E9g\u00E9 is a trademark of Stanford University
