--- a/protege-core/branches/merged/logging.properties
+++ b/protege-core/branches/merged/logging.properties
@@ -56,7 +56,13 @@ java.util.logging.ConsoleHandler.formatter=edu.stanford.smi.protege.util.Console
 #edu.stanford.smi.protege.util.LockStepper.level=FINE
 #edu.stanford.smi.protege.util.Log.level=FINEST
 
+
 #org.protege.client.cache.level=FINE
+#edu.stanford.smi.protegex.changes.listeners.ChangesListener.level=FINE
+#edu.stanford.smi.protegex.server_changes.listeners.owl.ChangesOwlKBListener.level=FINE
+#edu.stanford.smi.protegex.server_changes.ServerChangesUtil.level=FINE
+#edu.stanford.smi.protegex.prompt.promptDiff.users.ProtegeLogging.level=FINE
+#edu.stanford.smi.protegex.server_changes.time.ChangingFrameManagerImpl=FINE
 
 #
 # RMI logging
