added some documentation of the logging.properties

--- a/protege-core/branches/merged/logging.properties
+++ b/protege-core/branches/merged/logging.properties
@@ -34,9 +34,24 @@ java.util.logging.FileHandler.formatter=java.util.logging.SimpleFormatter
 java.util.logging.ConsoleHandler.level=CONFIG
 java.util.logging.ConsoleHandler.formatter=edu.stanford.smi.protege.util.ConsoleFormatter
 
+#
+# In general it is very important that fine grained logging be turned
+# off by default.  Logging can make a significant impact on performance.
+#
+
+#
+# The following is an unusual case where we deliberately enable fine
+# grained logging.  The purpose of this is to allow faulty plugins to 
+# only leave short messages on the console while the longer more
+# explicit message goes to the protege log file.  Performance impact
+# should be minimal unless a ill-behaved plugin is generating a very
+# large number of error messages.
+#
+ edu.stanford.smi.protege.model.framestore.EventDispatchFrameStore.level=FINE
+
+
 
 #edu.stanford.smi.protege.model.framestore.level=FINEST
- edu.stanford.smi.protege.model.framestore.EventDispatchFrameStore.level=FINE
 #edu.stanford.smi.protege.model.framestore.FrameStoreManager.level=FINEST
 #edu.stanford.smi.protege.model.framestore.FrameStore_Test.level=FINEST
 #edu.stanford.smi.protege.model.framestore.MergingNarrowFrameStore.level=FINEST
