--- a/protege-core/trunk/build.xml
+++ b/protege-core/trunk/build.xml
@@ -35,7 +35,7 @@
 	<property name = "source" value = "1.5"/>
 	<path id = "project.classpath">    
         <pathelement location = "${lib}/junit.jar"/>
-	    <pathelement location = "${lib}/looks.jar"/>
+	    <pathelement location = "${lib}/looks-2.1.3.jar"/>
         <pathelement location = "${lib}/unicode_panel.jar"/>
 	</path>  
     <path id = "database.drivers">
